--- a/producto.css
+++ b/producto.css
@@ -43,5 +43,11 @@ h1
     margin-right: 17%;
     margin-top: 70px;
 }
-
+table
+{
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+    border-spacing: 200px 0px;
+}
 
