--- a/producto.css
+++ b/producto.css
@@ -1,25 +1,29 @@
-img
+#producto img
 {
     margin-top: 4%;
-    margin-left: 20%;
-    width: 400px;
-    height: 400px;
+    margin-left: 15%;
     float: left;
+    width: 350px;
+    height: 350px;
 }
 #info #nombre
 {
-    font-size: 30px;
+    font-size: 35px;
     margin-left: 65%;
     font-weight: bold;
 }
 #info #precio
 {
-    font-size: 25px;
+    font-size: 30px;
     margin-left: 65%;
+    border-style: dotted;
+    text-align: center;
+    color: #004AAD;
+    font-weight: bold;
 }
 #info #detalles
 {
-    font: 24px;
+    font: 30px;
     margin-left: 65%;
 }
 p
@@ -40,7 +44,7 @@ h1
 }
 #info
 {
-    margin-right: 17%;
+    margin-right: 10%;
     margin-top: 10%;
 }
 #menu a
@@ -50,10 +54,25 @@ h1
     text-shadow: 3px 3px 0px #FFFFFF;
     color: #004AAD;
 }
-table
+#menu table
 {
     font-size: 20px;
     font-family: sans-serif;
     font-weight: bold;
     border-spacing: 200px 0px;
+}
+#titulo
+{
+    padding: 10px;
+    display: block;
+}
+#titulo h1
+{
+    font-size: 40px;
+    font-family: sans-serif;
+    color: #FFFFFF;
+    text-shadow: 4px 4px 0px #004AAD;
+    text-align: center;
+    font-weight: bold;
+    top: 5%;
 }
