--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,10 @@ table
     text-shadow: 3px 3px 0px #FFFFFF;
     color: #004AAD;
 }
+#productos p
+{
+    font-weight: bold;
+    font-size: 30px;
+    text-shadow: 3px 3px 0px #FFFFFF;
+    color: #004AAD;
+}
